# exemplars

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/exemplars/: __init__.py  incrementum.py
